# ltoddy

./: .gitignore  Cargo.toml  README.md  alacritty.yml  config.toml  install-kubernetes-images-for-mac.sh  install-misc.rs  install.sh
docs/: README.md
misc/: alacritty.yml  morning  vimrc  zshrc
scripts/: install-kubernetes-images-for-mac.sh
src/: main.rs
