[package]
name = "ltoddy"
version = "0.1.0"
edition = "2021"
authors = ["ltoddy <taoliu0509@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = ""

[features]
default = ["sea-orm/sqlx-mysql"]

[dependencies]
anyhow = "1"
axum = "0.4"
configit = "0.1.4"
sea-orm = { version = "0.5", default-features = false, features = ["macros", "runtime-tokio-native-tls", "debug-print"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
tower = "0.4.11"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
