[package]
name = "ltoddy"
version = "0.1.0"
edition = "2021"
authors = ["ltoddy <taoliu0509@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "about myself"

[[bin]]
name = "install-misc"
path = "install-misc.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
log = "0.4"
simplelog = "0.11"
tokio = { version = "1.15", features = ["macros", "rt-multi-thread", "fs"] }
