[package]
name = "ltoddy"
version = "0.1.0"
edition = "2021"
authors = ["ltoddy <taoliu0509@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "about myself"

[[bin]]
name = "install-misc"
path = "install-misc.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", default-features = false, features = ["std"] }
log = "0.4"
simplelog = "0.11"
